--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "Simple Sales System",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node dist/main/server.js",
+    "debug": "nodemon -L --watch ./dist --inspect=0.0.0.0:9222 --nolazy ./dist/main/server.js",
+    "build": "rimraf dist && tsc -p tsconfig-build.json",
+    "build:watch": "rimraf dist && tsc -p tsconfig-build.json -w",
     "lint": "eslint src/**/*.ts",
     "format": "eslint src/**/*.ts --fix"
   },
@@ -31,7 +34,9 @@
   },
   "homepage": "https://github.com/guzmanrafael/sales-sytem-backend#readme",
   "devDependencies": {
+    "@types/express": "^4.17.12",
     "@types/node": "^15.12.4",
+    "@types/sequelize": "^4.28.9",
     "@typescript-eslint/eslint-plugin": "^4.28.0",
     "@typescript-eslint/parser": "^4.28.0",
     "eslint": "^7.29.0",
@@ -43,5 +48,14 @@
     "jest": "^27.0.4",
     "prettier": "^2.3.1",
     "typescript": "^4.3.4"
+  },
+  "dependencies": {
+    "express": "^4.17.1",
+    "module-alias": "^2.2.2",
+    "rimraf": "^3.0.2",
+    "sequelize": "^6.6.2"
+  },
+  "_moduleAliases": {
+    "@": "dist"
   }
 }
