--- a/ts.config.json
+++ b/ts.config.json
@@ -1,11 +1,17 @@
 {
-  "compilerOptions":
-    {
-      "target": "es2019",
-      "module": "commonjs",
-      "outDir": "dist",
-      "sourceMap": true
-    },
-  "include": ["src/**/*.ts"],
-  "exclude": ["node_modules"]
+  "compilerOptions": {
+    "outDir": "dist",
+    "module": "commonjs",
+    "target": "es2019",
+    "esModuleInterop": true,
+    "sourceMap": true,
+    "rootDirs": ["src", "tests"],
+    "baseUrl": "src",
+    "paths": {
+      "@/tests/*": ["../tests/*"],
+      "@/*": ["*"]
+    }
+  },
+  "include": ["src", "tests"],
+  "exclude": []
 }
