--- a/package.json
+++ b/package.json
@@ -34,11 +34,13 @@
   },
   "homepage": "https://github.com/guzmanrafael/sales-sytem-backend#readme",
   "devDependencies": {
+    "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.12",
     "@types/node": "^15.12.4",
     "@types/sequelize": "^4.28.9",
     "@typescript-eslint/eslint-plugin": "^4.28.0",
     "@typescript-eslint/parser": "^4.28.0",
+    "dotenv": "^10.0.0",
     "eslint": "^7.29.0",
     "eslint-plugin-import": "^2.23.4",
     "eslint-plugin-node": "^11.1.0",
@@ -52,6 +54,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "module-alias": "^2.2.2",
+    "mysql2": "^2.2.5",
     "rimraf": "^3.0.2",
     "sequelize": "^6.6.2"
   },
